Final HW3 Commit

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -20,7 +20,8 @@
   <p class="display-order" id="order-details"></p>
   <br>
   <p class="display-order" id="order-notes"></p>
-
+  <!-- This tag is only used for the mock.test.js file -->
+  <h1 class="testing-js">Cheesecake Order Form</h1>
   <h1 class="hide-on-click">
     Cheesecake Order Form
   </h1>
@@ -89,7 +90,7 @@
       <div class="dropdown-content" id="dropdown-content">
         <a class="dropdown-option">Jan</a>
         <a class="dropdown-option">Feb</a>
-        <a class="dropdown-option" onclick="changeList()">Mar</a>
+        <a class="dropdown-option">Mar</a>
         <a class="dropdown-option">Apr</a>
         <a class="dropdown-option">May</a>
         <a class="dropdown-option">Jun</a>
