Acutal Final Commit

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -6,7 +6,6 @@
 <body>
 
   <!--CSS file-->
-
   <head>
     <link rel="stylesheet" href="stylesheets/styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,6 +20,8 @@
   <br>
   <p class="display-order" id="order-notes"></p>
   <!-- This tag is only used for the mock.test.js file -->
+  <!-- Easiest way I could think of to make the test work since I have
+       two h1 tags -->
   <h1 class="testing-js">Cheesecake Order Form</h1>
   <h1 class="hide-on-click">
     Cheesecake Order Form
