--- a/public/index.html
+++ b/public/index.html
@@ -89,18 +89,18 @@
     <h3 class="h3-dropdown" id="h3-dropdown">Orders for
       <Button id="h3-button" class="dropbtn">Jan</Button>
       <div class="dropdown-content" id="dropdown-content">
-        <a class="dropdown-option">Jan</a>
-        <a class="dropdown-option">Feb</a>
-        <a class="dropdown-option">Mar</a>
-        <a class="dropdown-option">Apr</a>
-        <a class="dropdown-option">May</a>
-        <a class="dropdown-option">Jun</a>
-        <a class="dropdown-option">Jul</a>
-        <a class="dropdown-option">Aug</a>
-        <a class="dropdown-option">Sep</a>
-        <a class="dropdown-option">Oct</a>
-        <a class="dropdown-option">Nov</a>
-        <a class="dropdown-option">Dec</a>
+        <a class="dropdown-option" id="Jan">Jan</a>
+        <a class="dropdown-option" id="Feb">Feb</a>`
+        <a class="dropdown-option" id="Mar">Mar</a>
+        <a class="dropdown-option" id="Apr">Apr</a>
+        <a class="dropdown-option" id="May">May</a>
+        <a class="dropdown-option" id="Jun">Jun</a>
+        <a class="dropdown-option" id="Jul">Jul</a>
+        <a class="dropdown-option" id="Aug">Aug</a>
+        <a class="dropdown-option" id="Sep">Sep</a>
+        <a class="dropdown-option" id="Oct">Oct</a>
+        <a class="dropdown-option" id="Nov">Nov</a>
+        <a class="dropdown-option" id="Dec">Dec</a>
       </div>
     </h3>
   </div>
