Final Commits for HW#5

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,17 @@
 <!--Jayven Cachola-->
 <!--Borrowed some dropdown menu code from W3schools and ChatGPT-->
 
+<!-- NOTE: 
+    The HW#5 specifications do not work, I am submitting 
+    what I think would work for this specification
+    I kept getting this error: 
+    "Error: ER_NOT_SUPPORTED_AUTH_MODE: Client does not support authentication protocol requested by server; consider upgrading MySQL client"
+    I tried to fix it but I couldn't find a solution
+    I also tried to use the mysql2 package but I couldn't get it to work
+ -->
+
+
+
 <body>
 
   <!--CSS file-->
